// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> with initial props 1`] = `
.c0 {
  display: block;
  margin-bottom: 60px;
}

@media (min-width:568px) {
  .c0 {
    margin-bottom: 80px;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-bottom: 100px;
  }
}

<Section
  variant="section"
>
  <StyledSection
    variant="section"
  >
    <section
      className="c0"
    >
      <span>
        Content
      </span>
    </section>
  </StyledSection>
</Section>
`;

exports[`<Section /> with section variant 1`] = `
.c0 {
  display: block;
  margin-bottom: 60px;
}

@media (min-width:568px) {
  .c0 {
    margin-bottom: 80px;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-bottom: 100px;
  }
}

<Section
  variant="section"
>
  <StyledSection
    variant="section"
  >
    <section
      className="c0"
    >
      <span>
        Content
      </span>
    </section>
  </StyledSection>
</Section>
`;

exports[`<Section /> with semi-section variant 1`] = `
.c0 {
  display: block;
  margin-bottom: 40px;
}

@media (min-width:768px) {
  .c0 {
    margin-bottom: 50px;
  }
}

<Section
  variant="semi-section"
>
  <StyledSection
    variant="semi-section"
  >
    <section
      className="c0"
    >
      <span>
        Content
      </span>
    </section>
  </StyledSection>
</Section>
`;
